# model-bench

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
experiments/: example.yaml  labelled.example.yaml  rubric.md
modelbench/: __init__.py  __main__.py  aggregate.py  calibrate.py  client.py  config.py  funnel.py  generate.py  judge.py  matrix.py  schema.py  templating.py
tests/: conftest.py  test_aggregate.py  test_funnel.py  test_generate.py  test_judge.py  test_matrix.py  test_templating.py
