[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-bench"
version = "0.1.0"
description = "Compare many models on one prompt, and many prompt versions on one model, scored by an LLM judge."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
ui = ["streamlit>=1.36", "pandas>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["modelbench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
